@@ -1,17 +1,17 @@
+import transaction
+
 from repoze.bfg.configuration import Configurator
+from repoze.tm import after_end
+from repoze.tm import isActive
 
 from {{package}}.models import appmaker
 from {{package}}.models import DBSession
 
-class Cleanup:
-    def __init__(self, cleaner):
-        self.cleaner = cleaner
-    def __del__(self):
-        self.cleaner()
-
 def handle_teardown(event):
     environ = event.request.environ
-    environ['usermanager.sasession'] = Cleanup(DBSession.remove)
+    if isActive(environ):
+        t = transaction.get()
+        after_end.register(DBSession.remove, t)
 
 def app(global_config, **settings):
     """ This function returns a WSGI application.
